[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Ship.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/World.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Enemy_Laser.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 144, 42.5 )

[sub_resource type="ParticlesMaterial" id=2]
emission_shape = 2
emission_box_extents = Vector3( 144, 0, 0 )
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
spread = 0.0
gravity = Vector3( 0, 10, 0 )
initial_velocity = 200.0
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color = Color( 0.913725, 0.937255, 0.92549, 1 )

[node name="World" type="Node"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.129412, 0.117647, 0.12549, 1 )

[node name="Ship" parent="." instance=ExtResource( 1 )]
position = Vector2( 144, 480 )

[node name="Detectors" type="Node2D" parent="."]
visible = false

[node name="Detector_1" type="Area2D" parent="Detectors"]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detectors/Detector_1"]
position = Vector2( 144, 470 )
shape = SubResource( 1 )

[node name="Detector_2" type="Area2D" parent="Detectors"]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detectors/Detector_2"]
position = Vector2( 144, 385 )
shape = SubResource( 1 )

[node name="Detector_3" type="Area2D" parent="Detectors"]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detectors/Detector_3"]
position = Vector2( 144, 300 )
shape = SubResource( 1 )

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 144, 0 )
amount = 200
lifetime = 10.0
preprocess = 11.0
process_material = SubResource( 2 )

[node name="Enemy_Laser" parent="." instance=ExtResource( 3 )]
position = Vector2( 142, 171 )

[connection signal="area_entered" from="Detectors/Detector_1" to="Ship" method="_on_Detector_1_area_entered"]
[connection signal="area_entered" from="Detectors/Detector_2" to="Ship" method="_on_Detector_2_area_entered"]
[connection signal="area_entered" from="Detectors/Detector_3" to="Ship" method="_on_Detector_3_area_entered"]
